--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
+    "gh-pages": "^6.1.1",
+    "pizzeria_mammamia": "file:",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1"
