--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/react-bootstrap": "^0.32.37",
     "bootstrap": "^5.3.3",
     "gh-pages": "^6.1.1",
     "pizzeria_mammamia": "file:",
